finalizacion de forms

--- a/estudiantes/templates/estudiantes/listadosindatable.html
+++ b/estudiantes/templates/estudiantes/listadosindatable.html
@@ -105,8 +105,8 @@
           			<td>{{ estudiante.Es_Apellido }}</td>
           			<td>{{ estudiante.Es_Codigo }}</td>
           			<td>{{ estudiante.Es_Programa_ID }}</td>
-          			<td>{{ estudiante.Es_Departamento_ID }}</td>
-                <td>{{ estudiante.Es_Municipio_ID }}</td>
+          			<td>{{ estudiante.Es_Departamento }}</td>
+                <td>{{ estudiante.Es_Municipio }}</td>
                 <td>{{ estudiante.Es_Venada }}</td>
 
           			<td>
