--- a/estudiantes/templates/estudiantes/student_list2.html
+++ b/estudiantes/templates/estudiantes/student_list2.html
@@ -86,6 +86,7 @@
           <p>
           Nombre: &nbsp{{ filter.form.Es_Nombre }} &nbsp
           Apellido: &nbsp {{ filter.form.Es_Apellido }} &nbsp
+          Identificacion: &nbsp {{ filter.form.Es_Identificacion }} &nbsp
           Codigo: &nbsp{{ filter.form.Es_Codigo }} &nbsp;&nbsp;
           <button class="btn btn-success" type="submit">Filtrar</button>
           </p>
@@ -97,11 +98,11 @@
           			<td>#</td>
           			<td>Nombres</td>
           			<td>Apellidos</td>
+                <td>Identificacion</td>
           			<td>Codigo</td>
           			<td>Programa</td>
           			<td>Departamento</td>
           			<td>Municipio</td>
-                <td>Avenada</td>
                 <td>Acciones</td>
           		</tr>
 
@@ -113,11 +114,11 @@
           			<td>{{ estudiante.id_Estudiante }}</td>
           			<td>{{ estudiante.Es_Nombre }}</td>
           			<td>{{ estudiante.Es_Apellido }}</td>
+                <td>{{ estudiante.Es_Identificacion }}</td>
           			<td>{{ estudiante.Es_Codigo }}</td>
           			<td>{{ estudiante.Es_Programa_ID }}</td>
-          			<td>{{ estudiante.Es_Departamento_ID }}</td>
-                <td>{{ estudiante.Es_Municipio_ID }}</td>
-                <td>{{ estudiante.Es_Venada }}</td>
+          			<td>{{ estudiante.Es_Departamento }}</td>
+                <td>{{ estudiante.Es_Municipio }}</td>
 
           			<td>
           				<a class="btn btn-primary" href="{% url 'site:estudiante_mostrar' estudiante.id_Estudiante %}">Ver</a>
@@ -148,7 +149,7 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-          
+
         </div>
         <!-- /.box-footer-->
       </div>
