--- a/estudiantes/templates/base/b_header.html
+++ b/estudiantes/templates/base/b_header.html
@@ -217,7 +217,7 @@
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
-            <span class="hidden-xs">Ing. Duvan Mejia</span>
+            <span class="hidden-xs">{{ user.get_username }}</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
@@ -225,8 +225,8 @@
               <img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
 
               <p>
-              Ing. Duvan Mejia - Web Developer
-                <small>Member since Nov. 2012</small>
+              {{ user.username }}
+                <small>Miembro desde el {{ user.date_joined }}</small>
               </p>
             </li>
             <!-- Menu Body -->
@@ -250,7 +250,7 @@
                 <a href="#" class="btn btn-default btn-flat">Profile</a>
               </div>
               <div class="pull-right">
-                <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                <a href="{% url 'site:logout' %}" class="btn btn-default btn-flat">Sign out</a>
               </div>
             </li>
           </ul>
